@@ -1,6 +1,7 @@
 package database;
 
 import base.*;
+import com.mysql.jdbc.ResultSetImpl;
 import screen.EnumUserType;
 import sun.awt.image.ImageWatched;
 import sun.rmi.runtime.Log;
@@ -14,6 +15,7 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.sql.*;
 import java.util.LinkedList;
+import java.util.concurrent.TimeUnit;
 
 public class DatabaseManager {
     /**
@@ -52,18 +54,17 @@ public class DatabaseManager {
         databaseName = "TTB";
         databaseServer = "icarusnet.me";
 
-        if(databaseType.equals("derby")){
+        if (databaseType.equals("derby")) {
             derby = true; //MAGIC!
             endQueryLine = "";
-        }
-        else if(databaseType.equals("mysql") || databaseType.equals("MySQL")){
+        } else if (databaseType.equals("mysql") || databaseType.equals("MySQL")) {
             mysql = true; //MORE MAGIC!
             endQueryLine = ";";
         }
         /*else if(database.equals("sqlite") || database.equals("SQLite")){
             sqlite = true
         }*/
-        else{
+        else {
             LogManager.println("Unknown database type!", EnumWarningType.ERROR);
             return;
         }
@@ -76,35 +77,44 @@ public class DatabaseManager {
         }*/
 //        LogManager.println("    Driver registered!");
         LogManager.print("Attempting connection to " + databaseType + " database... ");
-        try {
-
-            if(derby){
-                connection = DriverManager.getConnection("jdbc:derby:"+databaseName+";create=true");
-            }
-            else if(mysql){
-                connection = DriverManager.getConnection("jdbc:mysql://"+databaseServer+"/"+databaseName+"?" + "user=cadborosaurus&password=JT6N0x5dm09OgpPU");
-            }
+        boolean noDB = true;
+        int MAXTRIES = 10;
+        int tries = 0;
+        while (noDB) {
+            try {
+                if (derby) {
+                    connection = DriverManager.getConnection("jdbc:derby:" + databaseName + ";create=true");
+                } else if (mysql) {
+                    connection = DriverManager.getConnection("jdbc:mysql://" + databaseServer + "/" + databaseName + "?" + "user=cadborosaurus&password=JT6N0x5dm09OgpPU");
+                }
             /*else if(sqlite){
                 connection = DriverManager.getConnection("jdbc:sqlite:TTB.db");
             }*/
-            LogManager.println("Connection established!");
-        } catch (SQLException e) { //BOOKER, CATCH!
-            LogManager.println("");
-            LogManager.print("Database connection failed. ", EnumWarningType.ERROR);
-            if(derby){
-                LogManager.println("There may already be a connection to the database."); //Derby is monogamous.
-                System.exit(0);
-            }
-            else if(mysql){
+                LogManager.println("Connection established!");
+                noDB = false;
+            } catch (SQLException e) { //BOOKER, CATCH!
                 LogManager.println("");
+                LogManager.print("Database connection failed. ", EnumWarningType.ERROR);
+                if (derby) {
+                    LogManager.println("There may already be a connection to the database."); //Derby is monogamous.
+                } else if (mysql) {
+                    LogManager.println("");
+                }
+                if (tries == MAXTRIES) {
+                    LogManager.println("Giving up.", EnumWarningType.ERROR);
+                    System.exit(0);
+                }
+                LogManager.println("Retrying...", EnumWarningType.NOTE);
+                try {
+                    TimeUnit.SECONDS.sleep(5);
+                } catch (InterruptedException e1) {
+//                    e1.printStackTrace();
+                }
+                tries++;
             }
-            //e.printStackTrace();
-//            LogManager.printStackTrace(e.getStackTrace());
-//            e.printStackTrace();
-
-            return;
+          
+          
         }
-//        LogManager.println("Java DB connection established!");
 
         try {
             statement = connection.createStatement();
@@ -127,10 +137,10 @@ public class DatabaseManager {
         LogManager.print("Creating alcohol table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Alcohol(\n" +
-                    " TTBID VARCHAR(30) PRIMARY KEY,\n" +
+                    " TTBID VARCHAR(30) PRIMARY KEY UNIQUE,\n" +
                     " PermitNo VARCHAR(30) NOT NULL,\n" +
                     " SerialNo VARCHAR(30) NOT NULL,\n" +
-                    " CompletedDate DATE,\n" +
+                    " CompletedDate VARCHAR(20),\n" +
                     " FancifulName VARCHAR(100),\n" +
                     " BrandName VARCHAR(100) NOT NULL,\n" +
                     " Class VARCHAR(50) NOT NULL,\n" +
@@ -147,13 +157,14 @@ public class DatabaseManager {
         LogManager.print("Creating applications table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Applications(\n" +
-                    " ApplicationNo VARCHAR(20) PRIMARY KEY,\n" +
+                    " ApplicationNo VARCHAR(20) PRIMARY KEY UNIQUE,\n" +
                     " SerialNo VARCHAR(30) NOT NULL,\n" +
                     " ApplicationType VARCHAR(30) NOT NULL,\n" +
                     " ApplicationStatus VARCHAR(15) NOT NULL,\n" +
                     " ManufacturerUsername VARCHAR(20),\n" +
-                    " AgentName VARCHAR(30),\n" +
+                    " RepName VARCHAR(30),\n" +
                     " AgentUsername VARCHAR(30),\n" +
+                    " AgentName VARCHAR(30),\n" +
                     " RepID VARCHAR(30),\n" +
                     " PlantRegistry VARCHAR(30) NOT NULL,\n" +
                     " Locality VARCHAR(30) NOT NULL,\n" +
@@ -199,7 +210,7 @@ public class DatabaseManager {
         LogManager.print("Creating manufacturers table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Manufacturers(\n" +
-                    " Username VARCHAR(30) PRIMARY KEY,\n" +
+                    " Username VARCHAR(30) PRIMARY KEY UNIQUE,\n" +
                     " PasswordHash VARCHAR(75) NOT NULL,\n" +
                     " Company VARCHAR(100) NOT NULL,\n" +
                     " FullName VARCHAR(50) NOT NULL,\n" +
@@ -208,18 +219,19 @@ public class DatabaseManager {
                     " PlantRegistry VARCHAR(50) NOT NULL,\n" +
                     " PhoneNo VARCHAR(20) NOT NULL,\n" +
                     " Address2 VARCHAR(50) NOT NULL,\n" +
-                    " Agent VARCHAR(30)\n" +
+                    " Agent VARCHAR(30),\n" +
+                    " AgentDate VARCHAR(20)\n" +
                     ")" + endQueryLine);
             LogManager.println("Done.");
         } catch (SQLException e) {
             createTableError(e);
         }
     }
-    private static void createTableError(Exception e){
-        if(e.getMessage().contains("already exists")){
+
+    private static void createTableError(Exception e) {
+        if (e.getMessage().contains("already exists")) {
             LogManager.println("Already exists.");
-        }
-        else{
+        } else {
             LogManager.println("ERROR: " + e.getMessage());
 
             System.exit(0); //(╯°□°）╯︵ ┻━┻
@@ -234,7 +246,7 @@ public class DatabaseManager {
         String value1 = value.toUpperCase();
         if (table.equals(EnumTableType.ALCOHOL)) {
             if (value.isEmpty() && type.equals("All")) {
-                return queryAlcohol("SELECT * FROM Alcohol"+endQueryLine);
+                return queryAlcohol("SELECT * FROM Alcohol" + endQueryLine);
             } else {
                 switch (type) { //funky fresh
                     case "All":
@@ -270,13 +282,13 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     public static LinkedList<DataSet> advancedSearch(String cat1, String val1, String cat2, String val2, String cat3, String val3) {
 
-        if(cat1.equals("BrandName") || cat1.equals("FancifulName")){
+        if (cat1.equals("BrandName") || cat1.equals("FancifulName")) {
             val1 = val1.toUpperCase(); //lowercase is lame.
         }
-        if(cat2.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat2.equals("BrandName") || cat2.equals("FancifulName")) {
             val2 = val2.toUpperCase();
         }
-        if(cat3.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat3.equals("BrandName") || cat2.equals("FancifulName")) {
             val3 = val3.toUpperCase();
         }
 
@@ -285,30 +297,26 @@ public class DatabaseManager {
         String query3 = "SELECT * FROM Alcohol WHERE " + cat3 + " LIKE '" + val3 + "%' OR " + cat3 + " LIKE '%" + val3 + "' OR " + cat3 + " LIKE '%" + val3 + "%'";
         String combinedQuery; //4 Cuils
 
-        if(cat1.equals("BrandName") || cat1.equals("FancifulName")){
+        if (cat1.equals("BrandName") || cat1.equals("FancifulName")) {
             val1 = val1.toUpperCase();
         }
-        if(cat2.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat2.equals("BrandName") || cat2.equals("FancifulName")) {
             val2 = val2.toUpperCase();
         }
-        if(cat3.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat3.equals("BrandName") || cat2.equals("FancifulName")) {
             val3 = val3.toUpperCase();
         }
 
         try {
-            if(!val1.isEmpty() && val2.isEmpty() && val3.isEmpty()){
+            if (!val1.isEmpty() && val2.isEmpty() && val3.isEmpty()) {
                 combinedQuery = query1;
-            }
-            else if(!val1.isEmpty() && !val2.isEmpty() && val3.isEmpty()){
+            } else if (!val1.isEmpty() && !val2.isEmpty() && val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query2;
-            }
-            else if(!val1.isEmpty() && val2.isEmpty() && !val3.isEmpty()){
+            } else if (!val1.isEmpty() && val2.isEmpty() && !val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query3;
-            }
-            else if(!val1.isEmpty() && !val2.isEmpty() && !val3.isEmpty()){
+            } else if (!val1.isEmpty() && !val2.isEmpty() && !val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query2 + "UNION " + query3;
-            }
-            else{
+            } else {
                 combinedQuery = "SELECT * FROM Alcohol"; //It's been a rough day.
             }
         } catch (Exception e) {
@@ -375,8 +383,9 @@ public class DatabaseManager {
                     "ApplicationType," +
                     "ApplicationStatus," +
                     "ManufacturerUsername, " +
-                    "AgentName, " +
+                    "RepName, " +
                     "AgentUsername, " +
+                    "AgentName, " +
                     "RepID, " +
                     "PlantRegistry, " +
                     "Locality, " +
@@ -405,8 +414,9 @@ public class DatabaseManager {
                     + application.ApplicationType + "', '"
                     + application.ApplicationStatus + "', '"
                     + application.ManufacturerUsername + "', '"
-                    + application.AgentName + "', '"
+                    + application.RepName + "', '"
                     + application.AgentUsername + "', '"
+                    + application.AgentName + "', '"
                     + application.RepID + "', '"
                     + application.PlantRegistry + "', '"
                     + application.Locality + "', '"
@@ -438,10 +448,9 @@ public class DatabaseManager {
             statement.executeUpdate("UPDATE Applications\n" +
                     "SET DateOfSubmission = '" + date + "'\n" +
                     "WHERE ApplicationNo = " + "ApplicationNo" + endQueryLine);
-        }
-        catch (SQLException e){
+        } catch (SQLException e) {
             //ಠ_ಠ
-            LogManager.print("Could not set DateOfSubmission on newly submitted application " + application.ApplicationNo + ": ");
+            LogManager.print("Could not set DateOfSubmission '" + date + "' on newly submitted application " + application.ApplicationNo + ": ");
             LogManager.println(e.getMessage());
         }
     }
@@ -469,6 +478,8 @@ public class DatabaseManager {
                 manufacturer.RepID = searchManufacturers.getString("RepID");
                 manufacturer.PlantRegistry = searchManufacturers.getString("PlantRegistry");
                 manufacturer.PhoneNo = searchManufacturers.getString("PhoneNo");
+                manufacturer.Agent = searchManufacturers.getString("Agent");
+                manufacturer.AgentDate = searchManufacturers.getString("AgentDate");
                 manufacturers.add(manufacturer); //One to beam up.
                 LogManager.print(manufacturers.size() + "items long.");
             }
@@ -508,17 +519,16 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////SET STATUS////////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void setAgentStatus(String username, String status){ //We're competing with facebook.
+    public static void setAgentStatus(String username, String status) { //We're competing with facebook.
 
         status = status.toUpperCase();
-        if(status.equals("REMOVE")){
-            try{
+        if (status.equals("REMOVE")) {
+            try {
                 statement.executeUpdate("DELETE FROM Agents WHERE Username = '" + username + "' ");
             } catch (SQLException e) {
                 e.printStackTrace();
             }
-        }
-        else {
+        } else {
             try {
                 statement.executeUpdate("UPDATE Agents SET " +
                         "Status = '" + status + "' " +
@@ -533,12 +543,12 @@ public class DatabaseManager {
     ///////////Clear Table///////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
 
-    public void clearInbox(String username){
-        try{
+    public void clearInbox(String username) {
+        try {
             statement.executeUpdate("UPDATE Applications SET" +
-                            "AgentUsername = '' " +
-                            "WHERE AgentUsername = '" + username + "'" + endQueryLine);
-        }catch (SQLException e){
+                    "AgentUsername = '' " +
+                    "WHERE AgentUsername = '" + username + "'" + endQueryLine);
+        } catch (SQLException e) {
             e.printStackTrace();
         }
     }
@@ -553,6 +563,7 @@ public class DatabaseManager {
             /*while(searchManufacturers.next()) {
                 userm.username = searchManufacturers.getString("Username");
             }*/
+            LogManager.print("Updating information for manufacturer" + manufacturer.username + "... ", EnumWarningType.NOTE);
             statement.executeUpdate("UPDATE Manufacturers SET " +
                     "FullName = '" + manufacturer.name + "', " + //WHOOOOO ARE YOU? OOH OHH, OOH OOH...
                     "RepID = '" + manufacturer.RepID + "', " +
@@ -560,8 +571,10 @@ public class DatabaseManager {
                     "PlantRegistry = '" + manufacturer.PlantRegistry + "', " +
                     "PhoneNo = '" + manufacturer.PhoneNo + "' " +
                     "WHERE Username = '" + manufacturer.username + "'" + endQueryLine);
+            LogManager.println("Success!");
         } catch (SQLException e) {
-            e.printStackTrace();
+            LogManager.print("Failed. ");
+            LogManager.println(e.getMessage());
         }
     }
 
@@ -574,7 +587,7 @@ public class DatabaseManager {
                 statement.executeUpdate("DELETE FROM Alcohol WHERE TTBID = '" + application.ApprovedTTBID + "'" + endQueryLine);
                 statement.executeUpdate("DELETE FROM Applications WHERE ApplicationNo = '" + application.ApplicationNo + "'" + endQueryLine);
                 submitApplication(application);
-                approveApplication(application.ApplicationNo);
+                reapproveApplication(application.ApplicationNo, application.ApprovedTTBID);
             } else {
                 statement.executeUpdate("DELETE FROM Applications WHERE ApplicationNo = '" + application.ApplicationNo + "'" + endQueryLine);
                 submitApplication(application);
@@ -587,8 +600,18 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////APPROVE APPLICATION///////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void approveApplication(String ApplicationNum) {
+    public static void reapproveApplication(String ApplicationNum, String TTBID) {
+        //String TTBID = generateTTBID();
+        approveApplication(ApplicationNum, TTBID);
+    }
+
+    public static void approveNewApplication(String ApplicationNum) {
         String TTBID = generateTTBID();
+        approveApplication(ApplicationNum, TTBID);
+    }
+
+    public static void approveApplication(String ApplicationNum, String TTBID) {
+
         try {
             statement.executeUpdate("UPDATE Applications SET ApplicationStatus = 'APPROVED' WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
             statement.executeUpdate("UPDATE Applications SET AgentUsername = NULL WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
@@ -604,14 +627,15 @@ public class DatabaseManager {
         String ApplicationType = approvedApplication.ApplicationType;
         String ApplicationStatus = approvedApplication.ApplicationStatus;
         String ManufacturerUsername = approvedApplication.ManufacturerUsername;
-        String AgentName = approvedApplication.AgentName;
+        String RepName = approvedApplication.RepName;
         String AgentUsername = approvedApplication.AgentUsername;
+        String AgentName = approvedApplication.AgentName;
         String RepID = approvedApplication.RepID;
         String PlantRegistry = approvedApplication.PlantRegistry;
         String Locality = approvedApplication.Locality;
         String Brand = approvedApplication.Brand;
         String FancifulName = approvedApplication.FancifulName; //Fancy feast is delicious.
-        String AlcoholType = approvedApplication.AlcoholType;
+        String AlcoholType = approvedApplication.AlcoholType; // WHAT ARE THEY SELLING??
         String ABV = approvedApplication.ABV;
         String Address = approvedApplication.Address;//Is this the real life?
         String Address2 = approvedApplication.Address2;//Is this just fantasy?
@@ -619,17 +643,16 @@ public class DatabaseManager {
         String WineAppelation = approvedApplication.WineAppelation;//Caught in a landslide
         String VintageDate = approvedApplication.VintageDate;//NO ESCAPE FROM REALITY...
         String Grapes = approvedApplication.Grapes;
-        String PH = approvedApplication.PH;
+        String PH = approvedApplication.PH; //THEY'RE SELLING CHOCOLATE!!!
         String PhoneNo = approvedApplication.PhoneNo;
         String Email = approvedApplication.Email;
         String AdditionalInfo = approvedApplication.AdditionalInfo;
         String DateOfSubmission = approvedApplication.DateOfSubmission;
-        String DateOfApproval = approvedApplication.DateOfApproval;
+        String CompletedDate = approvedApplication.DateOfApproval;
         String DateOfExpiration = approvedApplication.DateOfExpiration;
         String ApprovedTTBID = approvedApplication.ApprovedTTBID;
         String ReasonForRejection = approvedApplication.ReasonForRejection;
-//        String AlcoholClass = approvedApplication.
-//        LogManager.println("LOOOOOOK HEEEEEEERREEEEEE: " + ApplicationNo + " " + ABV);
+        String Class = "";
 
         try {
             LogManager.println("INSERTING THINGS NOW!!!");
@@ -640,35 +663,37 @@ public class DatabaseManager {
                     "CompletedDate, " +
                     "FancifulName, " +
                     "BrandName, " +
+                    "Class, " +
                     "Origin, " +
-//                    "Class, " +
-                    "Type, " + //TODO - Is this wrong??
+                    "Type, " +
                     "AlcoholContent, " +
                     "VintageYear, " +
                     "PH) VALUES ('" +
                     ApprovedTTBID + "', '" +
                     PlantRegistry + "', '" +
                     SerialNo + "', '" +
-                    DateOfApproval + "', '" +
-                    FancifulName + "', '" +
-                    Brand + "', '" +
+                    CompletedDate + "', '" +
+                    FancifulName.toUpperCase() + "', '" +
+                    Brand.toUpperCase() + "', '" +
+                    PH + "', '" +
                     Locality + "', '" +
-//                    Class + "', '" +
                     AlcoholType + "', '" +
                     ABV + "', '" +
                     VintageDate + "', '" +
-                    PH + "') + endQueryLine");
+                    PH + "')" + endQueryLine);
         } catch (SQLException e) {
             e.printStackTrace();
         }
     }
+
     //HACK
     /////////////////////////////////////////////////////////////////////////////////
     ///////////REJECT APPLICATION////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void rejectApplication(String ApplicationNo) {//GET REKKKDDDDD!
+    public static void rejectApplication(String ApplicationNo, String reasonForRejection) {
         try {
             statement.executeUpdate("UPDATE Applications SET ApplicationStatus = 'REJECTED' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
+            statement.executeUpdate("UPDATE Applications SET ReasonForRejection = '"+ reasonForRejection + "' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
             statement.executeUpdate("UPDATE Applications SET AgentUsername = NULL WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
             //stmt.executeUpdate("INSERT INTO Alcohol (TTBID, PermitNo, SerialNo, CompletedDate, FancifulName, BrandName, Origin, Class, Type) VALUES (" + TTBID + " " + PermitNo + " " + SerialNo + " " + Date + " " + FancifulName + " " + BrandName + " " + Origin + " " + Class + " " + Type + ")");
         } catch (SQLException e) {
@@ -680,8 +705,13 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////FORWARD APPLICATION///////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public void forwardApplication(String ApplicationNo, String AgentUsername){
-//        Change the Agent username on the the specific application to the new username passed
+    public void forwardApplication(String ApplicationNo, String AgentUsername) {
+        try {
+            statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + AgentUsername + "' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
+        }catch (SQLException e) {
+            LogManager.println("agent does not exist", EnumWarningType.ERROR); //I'm sorry Dave, but I'm afraid I can't do that.
+            e.printStackTrace();
+        }
     }
 
     /////////////////////////////////////////////////////////////////////////////////
@@ -696,27 +726,71 @@ public class DatabaseManager {
     ///////////ADD APPLICATIONS TO AGENT'S INBOX/////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
     public static LinkedList<Application> addApplicationToInbox(String type, String username, int num) {
-        LinkedList<DataSet> applicationLinkedList = queryApplications("SELECT * FROM Applications WHERE AlcoholType = '" + type + "';");
+        LinkedList<DataSet> applicationLinkedList = queryApplications("SELECT * FROM Applications WHERE AlcoholType = '" + type + "' AND ApplicationStatus = 'PENDING' AND AgentUsername = '';");
         LinkedList<Application> addToInbox = new LinkedList<>();
-        for (int i = 0; i < num; i++) {
-            try {
-                Application tempApp = (Application) applicationLinkedList.get(i);
-                if (tempApp.ApplicationStatus.equals("PENDING") && tempApp.AgentUsername.equals("")) {
-                    LogManager.println("Application added");
-                    addToInbox.add((Application) applicationLinkedList.get(i));
 
+        //counters
+        int i = 0;
+        int j = -1;
+
+        boolean isFirst = true;//checks if it is the first time through the linked list
+
+        while (i < num) { //makes sure that the inbox never exceeds 10 applications
+            try {
+                //increaces the counter of linked list
+                j++;
+                Application tempApp = (Application) applicationLinkedList.get(j); //gets one of the applications from all applications
+                LinkedList<DataSet> tempMans = queryDatabase(EnumTableType.MANUFACTURER, "Username", tempApp.ManufacturerUsername);//gets the manufacturer for the specific application
+                UserManufacturer tempMan = (UserManufacturer) tempMans.getFirst(); //gets the current date
+                String curDate = StringUtilities.getDate();
+                LogManager.println(curDate);
+                if (!tempMan.AgentDate.equals(curDate)) {
+                    tempMan.Agent = "";
+                }
+                //check if that manufacturer has a specific agent on the day and adds it to the inbox
+                if (tempMan.Agent.equals(username) || (tempMan.Agent.equals("") && !isFirst)) {
+                    addToInbox.add((Application) applicationLinkedList.get(j));
                     try {
+                        //sets the applications agent as the agents username who was there
                         statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + username + "' WHERE ApplicationNo = '" + tempApp.ApplicationNo + "'" + endQueryLine);
+                        //sets the manufacturers agent and day to the agent username and date passed in
+                        statement.executeUpdate("UPDATE Manufacturers SET Agent = '" + username + "' WHERE Username = '" + tempMan.Agent + "'" + endQueryLine);
+                        //increments the number of applications added to the inbox
+                        i++;
                     } catch (SQLException e) {
                         LogManager.println("Error setting agent on application " + ((Application) applicationLinkedList.get(i)).ApplicationNo + " !", EnumWarningType.ERROR);
                     }
+                    //checks if the manufacturer doesnt have an agent
                 }
-            } catch (Exception e) { //If your hand touches metal,
-                //I swear by my pretty floral bonnet, I will end you.
-                break;
+                /*else if(tempMan.Agent.equals("")){
+                    //adds the application to the inbox on the second pass
+                    if(!isFirst){
+                        //same as above
+                        addToInbox.add((Application) applicationLinkedList.get(i));
+                        try {
+                            statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + username + "' WHERE ApplicationNo = '" + tempApp.ApplicationNo + "'" + endQueryLine);
+                            statement.executeUpdate("UPDATE Manufacturers SET Agent = '" + username + "' WHERE Username = '" + tempMan.Agent + "'" + endQueryLine);
+                            i++;
+                        } catch (SQLException e) {
+                            LogManager.println("Error setting agent on application " + ((Application) applicationLinkedList.get(i)).ApplicationNo + " !", EnumWarningType.ERROR);
+                        }
+                    }
+                }*/
+                //if the user has an agent it does not add it to the inbox
+            } catch (Exception e) {
+                //list of applications changed
+                if (isFirst) {
+                    //makes the while loop continue and start at the begining of the list
+                    isFirst = false;
+                    j = -1;
+                } else {//If your hand touches metal...
+                    //the list ran out of entries twice so break the loop cause nothings left
+                    //...I swear by my pretty floral bonnet, I will end you.
+                    break;
+                }
             }
-
         }
+
         return addToInbox; //YOU'VE GOT MAIL!!!!
     }
 
@@ -802,8 +876,8 @@ public class DatabaseManager {
             if (userType.equals(EnumUserType.MANUFACTURER)) {
                 UserManufacturer manufacturer = (UserManufacturer) user;
                 try {
-                    statement.executeUpdate("INSERT INTO Manufacturers" + " (Username, PasswordHash, Company, FullName, RepID, Email, PlantRegistry, PhoneNo, Address2) VALUES " +
-                            "( '" + manufacturer.username + "', '" + PasswordStorage.createHash(password) + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "')");
+                    statement.executeUpdate("INSERT INTO Manufacturers" + " (Username, PasswordHash, Company, FullName, RepID, Email, PlantRegistry, PhoneNo, Address2, Agent, AgentDate) VALUES " +
+                            "('" + manufacturer.username + "', '" + PasswordStorage.createHash(password) + "', '', '', '', '', '', '', '', '', '')");
 
                 } catch (PasswordStorage.CannotPerformOperationException e) {
                     e.printStackTrace();
@@ -822,31 +896,41 @@ public class DatabaseManager {
     public User login(String username, String password) throws UserNotFoundException, IncorrectPasswordException, PasswordStorage.InvalidHashException, PasswordStorage.CannotPerformOperationException {
         ResultSet user;
         try {
-            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "';");
+            LogManager.print("Searching for an agent called " + username + "... ", EnumWarningType.NOTE);
+//            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "';");
+
+            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "'" + endQueryLine);
+
             if (user.next()) {
-                UserAgent agent = new UserAgent(user.getString("FullName"), username, user.getString("Email"), user.getString("ID"), "false", "pending");
-                LogManager.println("User " + username + " is an agent");
+
+                //Create the Agent object from database information
+                UserAgent agent = new UserAgent(user.getString("FullName"), username, user.getString("Email"), user.getString("ID"),user.getString("SuperAgent"), user.getString("Status"));
+
+                LogManager.println("Found!");
+
                 tryPassword(username, password, user.getString("PasswordHash"));
-                return agent; //You can have this back now.
+
+                return agent;
             } else {
-                user = statement.executeQuery("SELECT * FROM Manufacturers WHERE username = '" + username + "';");
-                LinkedList<DataSet> manufacturerLinkedList = queryDatabase(EnumTableType.MANUFACTURER, "Username", username);
-                assert manufacturerLinkedList != null;
+                LogManager.println("not found.");
+                LogManager.println("Searching for a manufacturer called " + username + "... ", EnumWarningType.NOTE);
+
+                user = statement.executeQuery("SELECT * FROM Manufacturers WHERE Username = '" + username + "'" + endQueryLine);
+                LinkedList<DataSet> manufacturerLinkedList = new LinkedList<>();
+                if (user.next()) {
+                    manufacturerLinkedList = queryDatabase(EnumTableType.MANUFACTURER, "Username", username);
+                }
+
                 if (!manufacturerLinkedList.isEmpty()) {
-                    LogManager.println("YARP! WE FOUND " + username + "!"); //Where to next?
-                    /*
-                      ( •_•)
-                      ( •_•)>⌐■-■
-                      (⌐■_■)
-                    */
-                    UserManufacturer manufacturer = (UserManufacturer) manufacturerLinkedList.get(0); //PUB.
-                    LogManager.println("User " + manufacturer.username + " is a manufacturer");
+                    LogManager.println("Found!");
+
+                    UserManufacturer manufacturer = (UserManufacturer) manufacturerLinkedList.getFirst();
                     try {
-                        tryPassword(username, password, user.getString("PasswordHash")); // *Typing furiously*
+                        tryPassword(username, password, user.getString("PasswordHash"));
                     } catch (Exception e) {
                         LogManager.println(e.getMessage(), EnumWarningType.ERROR);
                     }
-                    return manufacturer; // I'M IN.
+                    return manufacturer;
                 } else {
                     LogManager.println("User " + username + " not found.", EnumWarningType.WARNING);
                     throw new UserNotFoundException(username);
